--- a/base.html
+++ b/base.html
@@ -29,5 +29,9 @@
   <body>
     <h1>does anyone click the bit.ly links that i tweet?</h1>
     {% block content %}{% endblock %}
+    <hr>
+    <center>
+	<a href="/">who clicks my bit.ly links?</a> &copy; <a href="http://www.linkybinky.com">linkybinky</a> 2010
+    </center>
   </body>
 </html>
