--- a/home.html
+++ b/home.html
@@ -1,4 +1,11 @@
 {% extends "base.html" %}
 {% block content %}
-this is the home page
+
+<form name="input" action="/" method="get">
+<center>
+<p>enter a twitter username (eg <a href="/aplusk">aplusk</a>, <a href="/oprah">oprah</a>, <a href="/theellenshow">theellenshow</a>)</p>
+<input type="text" name="username" />
+<input type="submit" value="submit" />
+</center>
+</form>
 {% endblock %}
