--- a/user.html
+++ b/user.html
@@ -8,7 +8,6 @@
 <tr><td>followers {{ summary.followers }}</td></tr>
 </table>
 
-
 {% for res in result_list %}
 <p>
   <b>{{ res.clicks }}</b> <i>({{ res.clickthrough }})</i>
@@ -16,3 +15,5 @@
 </p>
 {% endfor %}
 {% endblock %}
+
+<p><b>clicks</b> <i>(clicks divided by the number of followers)<i></p>
