--- a/home.html
+++ b/home.html
@@ -8,7 +8,7 @@
 <input type="submit" value="submit" />
 
 <p>
-<i>recently clicked</i>
+<i>twitter usernames that were recently tested</i>
 </p>
 
 <p>
@@ -17,6 +17,7 @@
 {% endfor %}
 </p>
 </center>
+
 </form>
 
 {% endblock %}
