--- a/about.html
+++ b/about.html
@@ -3,26 +3,21 @@
 
 <center>
 <p>so while i was at work the other day, waiting for one of my servers
-to build, i wondered to myself, how many of <a
+to build, i wondered the following: <i>how many of <a
 href="http://twitter.com/aplusk">ashton kutcher's</a> followers
-actually click on the links that he tweets, so i went ahead and built
-a little program using the wonderful <a
-href="http://twitter.com">twitter</a> and <a
-href="http://bit.ly">bit.ly</a> <a
-href="http://en.wikipedia.org/wiki/Application_programming_interface">API</a>. much
-to my surprise, i found that on most occassions less than 1% of his
-followers actually go on to click his links. see for <a
-href="/u/aplusk">yourself</a>. on the 2/18/2010 i had some free time
-and i just had to code (<i>very rapidly, mind you</i>) this up and
-make it generic and available for one and all. go on and try some
-users with some ridiculous <a href="http://twitterholic.com/">number
-of followers</a>
+actually click on the links that he tweets?</i>. so i went ahead and
+built a little program to do just that. much to my surprise, i found
+that on most occassions less than 1% of his followers actually go on
+to click the links that he tweets. go on, see for <a
+href="/u/aplusk">yourself</a>. you could also try out some users who
+have a ridiculous number of followers linked off <a
+href="http://twitterholic.com/">twitterholic</a>.
 </p>
 
 <p>now, there are a few caveats. if, for example, 2 users tweet the
-same URL, as far as I know, bit.ly gives both users the same URL, this
-could overstate the click count. also, some URLs get retweeted like
-crazy, once again overstating the click count.
+same URL, as far as I know, both these users are given the same bit.ly
+link, which could overstate the click count. also, some URLs get
+retweeted like crazy, once again overstating the click count.
 </p>
 </center>
 
