--- a/base.html
+++ b/base.html
@@ -41,5 +41,14 @@
     <center>
 	<a href="/">who clicks my bit.ly links?</a> &copy; <a href="http://hnagweb.appspot.com">Hareesh Nagarajan</a> 2010
     </center>
+<script type="text/javascript">
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script>
+<script type="text/javascript">
+try {
+var pageTracker = _gat._getTracker("UA-13105607-1");
+pageTracker._trackPageview();
+} catch(err) {}</script>
   </body>
 </html>
