--- a/base.html
+++ b/base.html
@@ -16,8 +16,11 @@
     font-size: 1.5em;
     padding: 50px;
    }
-   a { color: #FFFF00; text-decoration: none; }
-   .title { color: #FFF; font-size: 130%; }
+   a {color:#FFFF00; text-decoration:none;}
+   a.user {color:#FFFF00; text-decoration:none; font-weight:bold; text-decoration: underline;} 
+   a.hashtag {color:#00FF00} 
+   a.httplink {color:#00FF00} 
+   .title {color: #FFF; font-size: 130%;}
   </style>
 </head>
 
