--- a/base.html
+++ b/base.html
@@ -31,7 +31,7 @@
 
   </head>
   <body>
-    <h1><u><a href="/">anyone click the bit.ly links that i tweet?</a></u></h1>
+    <h1><u><a href="/">does anyone click the bit.ly links that i tweet?</a></u></h1>
         <center>        
         {% if show_why %}
         <a href="/about">why?</a>
