--- a/user.html
+++ b/user.html
@@ -1,12 +1,17 @@
 {% extends "base.html" %}
 {% block content %}
 
+<center>
+<a href="http://twitter.com/home?status=does anyone click the bit.ly links that i tweet? http://whoclicksmylinks.appspot.com/u/{{ username }}"><img src="/tweet_this.png" title="tweet this" alt="tweet this" style="border-style: none"/></a>
+</center>
+
 <table border="0">
 <tr><td>report for <a href="http://twitter.com/{{ summary.user }}">{{ summary.user }}</a></td></tr>
 <tr><td>recent tweets with links {{ summary.total_links }}</td></tr>
 <tr><td>clicks {{ summary.total_clicks }}</td></tr>
 <tr><td>followers {{ summary.followers }}</td></tr>
 </table>
+
 
 {% for res in result_list %}
 <p>
