--- a/base.html
+++ b/base.html
@@ -41,7 +41,7 @@
     {% block content %}{% endblock %}
     <hr>
     <center>
-	&copy; <a href="http://hnagweb.appspot.com">Hareesh Nagarajan</a> 2010
+	Copyright &copy; <a href="http://hnagweb.appspot.com">Hareesh Nagarajan</a> 2010
     </center>
 <script type="text/javascript">
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
