--- a/user.html
+++ b/user.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 <center>
-<a href="http://twitter.com/home?status=does anyone click the bit.ly links that i tweet? http://whoclicksmylinks.appspot.com/u/{{ username }}"><img src="/tweet_this.png" title="tweet this" alt="tweet this" style="border-style: none"/></a>
+<a href="http://twitter.com/home?status=does anyone click the bit.ly links that i tweet? http://whoclicksmylinks.appspot.com/u/{{ username }}"><img src="/tweet_this.png" title="tweet this: does anyone click the bit.ly links that i tweet? http://whoclicksmylinks.appspot.com/u/{{ username }}" alt="tweet this: does anyone click the bit.ly links that i tweet? http://whoclicksmylinks.appspot.com/u/{{ username }}" style="border-style: none"/></a>
 </center>
 
 <table border="0">
