--- a/base.html
+++ b/base.html
@@ -19,9 +19,26 @@
    a {color:#FFFF00; text-decoration:none;}
    a.user {color:#FFFF00; text-decoration:none; font-weight:bold; text-decoration: underline;} 
    a.hashtag {color:#00FF00} 
-   a.httplink {color:#00FF00} 
+   a.httplink {color:#00FF00}
+   a.celeb {color:#FE2EF7} 
    p.error {color:#FF0033}
    .title {color: #FFF; font-size: 130%;}
+
+   input.button {
+    border: 0;
+    background: #fff url(button.gif) no-repeat;
+    height: 22px;
+    /* used to catch the buttonEnding */
+    position: relative;
+   }
+
+   .buttonEnding {
+    position: absolute;
+    display: inline;
+    width: 7px;
+    height: 22px;
+    background: url(end.gif) no-repeat;
+   }
   </style>
 </head>
 
