--- a/user.html
+++ b/user.html
@@ -5,6 +5,10 @@
 <a href="http://twitter.com/home?status=does anyone click the bit.ly links that i tweet? http://whoclicksmylinks.appspot.com/u/{{ username }}"><img src="/tweet_this.png" title="tweet this: does anyone click the bit.ly links that i tweet? http://whoclicksmylinks.appspot.com/u/{{ username }}" alt="tweet this: does anyone click the bit.ly links that i tweet? http://whoclicksmylinks.appspot.com/u/{{ username }}" style="border-style: none"/></a>
 </center>
 
+<center>
+<p>fetched from bit.ly and twitter on {{ created_at|date }}. refreshed daily, starting now.</p>
+</center>
+
 <table border="0">
 <tr><td>report for <a href="http://twitter.com/{{ summary.user }}">{{ summary.user }}</a></td></tr>
 <tr><td>recent tweets with links {{ summary.total_links }}</td></tr>
