--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 
 <form name="input" action="/" method="get">
 <center>
-<p>enter a twitter username (eg <a href="/u/aplusk">aplusk</a>, <a href="/u/oprah">oprah</a>, <a href="/u/theellenshow">theellenshow</a>)</p>
+<p>enter a twitter username (try a <a href="/celebrities">celebrity</a>)</p>
 <input type="text" name="username" />
 <input type="submit" value="submit" />
 
@@ -13,17 +13,17 @@
 
 {% if recent_users %}
 <p>
-<i>twitter usernames that were recently tested</i>
+<i>twitter usernames inside our database</i>
 </p>
 {% endif %}
 
 <p>
 {% for res in recent_users %}
-<b><a href="/u/{{ res }}">{{ res }}</a></b>
+<b><a class="celeb" href="/u/{{ res }}">{{ res }}</a></b>
 {% endfor %}
 </p>
 </center>
-
+<div class="buttonEnding"></div>
 </form>
 
-{% endblock %}
+{% endblock %}z
