--- a/base.html
+++ b/base.html
@@ -23,21 +23,18 @@
    a.celeb {color:#FE2EF7} 
    p.error {color:#FF0033}
    .title {color: #FFF; font-size: 130%;}
-
    input.button {
     border: 0;
-    background: #fff url(button.gif) no-repeat;
+    background: #fff no-repeat;
     height: 22px;
-    /* used to catch the buttonEnding */
     position: relative;
    }
-
    .buttonEnding {
     position: absolute;
     display: inline;
     width: 7px;
     height: 22px;
-    background: url(end.gif) no-repeat;
+    background: no-repeat;
    }
   </style>
 </head>
