--- a/about.html
+++ b/about.html
@@ -10,8 +10,7 @@ built a little program to do just that. much to my surprise, i found
 that on most occassions less than 1% of his followers actually go on
 to click the links that he tweets. go on, see for <a
 href="/u/aplusk">yourself</a>. you could also try out some users who
-have a ridiculous number of followers linked off <a
-href="http://twitterholic.com/">twitterholic</a>.
+have a <a href="/celebrities">ridiculous number of followers</a>.
 </p>
 
 <p>now, there are a few caveats. if, for example, 2 users tweet the
